# OwlMastersBackend

./: frameworks_overview.md
back-end-101/: .env  .gitignore
back-end-101/lesson-2/: .gitignore
back-end-101/lesson-3/my_app/: main.py
back-end-101/lesson-3/utils/: helpers.py
back-end-101/lesson-5/: app.py  pyproject.toml
back-end-101/lesson-6/: app.py  pyproject.toml
back-end-101/lesson-7/: README.md  task.py  tasks.json
back-end-101/lesson-8/: .gitignore  app.py
back-end-101/lesson-9/: main.py  pyproject.toml
my_backend_project/: pyproject.toml
